// Copyright 2015 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto2";

option optimize_for = LITE_RUNTIME;

message SubMessage {
  optional int32 foo = 1;
}

message TestMessage {
  optional int32 fund_int = 1;
  optional string op_comp_string = 2;
  optional bytes op_comp_bytes = 3;
  optional SubMessage op_comp_sub = 4;
  repeated SubMessage rep_comp_sub = 5;
}
